--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             background-color: #f4f4f4;
             color: #333;
-            padding: 50px;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1, h2 {
+            text-align: center;
         }
         h1 {
             font-size: 3em;
             margin-bottom: 20px;
         }
         p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .footer {
+            text-align: center;
             margin-top: 50px;
         }
         .footer a {
@@ -34,13 +41,103 @@
     </style>
 </head>
 <body>
-    <h1>ModMySurron</h1>
-    <p>Our website is currently under development. Please check back soon!</p>
-    
-    <div class="footer">
-        <a href="privacy-policy.html">Privacy Policy</a>
-        <a href="terms-of-service.html">Terms of Service</a>
-        <a href="contact.html">Contact Us</a>
+    <div class="container">
+        <h1>ModMySurron</h1>
+        <p>Our website is currently under development. Please check back soon!</p>
+        
+        <div class="footer">
+            <a href="#privacy-policy">Privacy Policy</a>
+            <a href="#terms-of-service">Terms of Service</a>
+            <a href="#contact-us">Contact Us</a>
+        </div>
+
+        <h2 id="privacy-policy">Privacy Policy</h2>
+        <p><strong>Effective Date:</strong> August 2, 2024</p>
+        <p><strong>ModMySurron</strong> ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, <a href="http://modmysurron.com">modmysurron.com</a> (the "Site"). Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Site.</p>
+
+        <h3>Information We Collect</h3>
+        <p><strong>Personal Data</strong>: Information such as your name, email address, and phone number, which you voluntarily provide when you register on our Site or contact us.</p>
+        <p><strong>Usage Data</strong>: Information automatically collected when you visit the Site, such as your IP address, browser type, operating system, access times, and pages viewed.</p>
+        <p><strong>Cookies and Tracking Technologies</strong>: We use cookies and similar technologies to enhance your experience on our Site. You can choose to disable cookies through your browser settings.</p>
+
+        <h3>How We Use Your Information</h3>
+        <ul>
+            <li><strong>To Improve Our Site:</strong> We may use feedback you provide to improve our products and services.</li>
+            <li><strong>To Send Periodic Emails:</strong> We may use your email address to send information and updates pertaining to your order or request.</li>
+            <li><strong>For Analytics and Marketing:</strong> We may use your information to analyze usage trends and improve our marketing efforts.</li>
+        </ul>
+
+        <h3>Sharing Your Information</h3>
+        <p>We do not sell, trade, or rent your personal information to others. We may share information with third parties that perform services for us or on our behalf, such as payment processing, data analysis, email delivery, hosting services, customer service, and marketing assistance.</p>
+
+        <h3>Security of Your Information</h3>
+        <p>We use administrative, technical, and physical security measures to protect your personal information. While we have taken reasonable steps to secure the personal information you provide to us, please be aware that despite our efforts, no security measures are perfect or impenetrable.</p>
+
+        <h3>Changes to This Privacy Policy</h3>
+        <p>We may update this Privacy Policy from time to time. We will notify you about significant changes by updating the "Effective Date" of this Privacy Policy. We encourage you to periodically review this Privacy Policy to stay informed about our practices.</p>
+
+        <h3>Contact Us</h3>
+        <p>If you have questions or comments about this Privacy Policy, please contact us at: <a href="mailto:contact@modmysurron.com">contact@modmysurron.com</a></p>
+
+        <h2 id="terms-of-service">Terms of Service</h2>
+        <p><strong>Effective Date:</strong> August 2, 2024</p>
+        <p>Welcome to <a href="http://modmysurron.com">modmysurron.com</a>. These terms and conditions outline the rules and regulations for the use of the ModMySurron website.</p>
+
+        <p>By accessing this website, we assume you accept these terms and conditions. Do not continue to use ModMySurron if you do not agree to all of the terms and conditions stated on this page.</p>
+
+        <h3>License</h3>
+        <p>Unless otherwise stated, ModMySurron and/or its licensors own the intellectual property rights for all material on ModMySurron. All intellectual property rights are reserved. You may access this from ModMySurron for your personal use subjected to restrictions set in these terms and conditions.</p>
+        <ul>
+            <li>You must not republish material from ModMySurron</li>
+            <li>Sell, rent, or sub-license material from ModMySurron</li>
+            <li>Reproduce, duplicate, or copy material from ModMySurron</li>
+            <li>Redistribute content from ModMySurron</li>
+        </ul>
+
+        <h3>User Comments</h3>
+        <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. ModMySurron does not filter, edit, publish or review comments prior to their presence on the website. Comments do not reflect the views and opinions of ModMySurron, its agents, and/or affiliates. Comments reflect the views and opinions of the person who posts their views and opinions.</p>
+
+        <p>ModMySurron shall not be liable for the comments or for any liability, damages, or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the comments on this website.</p>
+
+        <h3>Hyperlinking to Our Content</h3>
+        <p>Organizations may link to our website without prior written approval:
+        <ul>
+            <li>Government agencies;</li>
+            <li>Search engines;</li>
+            <li>News organizations.</li>
+        </ul>
+        These organizations may link to our home page, to publications, or to other website information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement, or approval of the linking party and its products and/or services; and (c) fits within the context of the linking party's site.</p>
+
+        <h3>Liability Disclaimer</h3>
+        <p>The information contained in this website is for general information purposes only. The information is provided by ModMySurron, and while we endeavor to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</p>
+
+        <h3>Governing Law</h3>
+        <p>These terms and conditions are governed by and construed in accordance with the laws of [Your Jurisdiction] and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
+
+        <h3>Contact Us</h3>
+        <p>If you have questions or comments about these Terms of Service, please contact us at: <a href="mailto:contact@modmysurron.com">contact@modmysurron.com</a></p>
+
+        <h2 id="contact-us">Contact Us</h2>
+        <p>We'd Love to Hear from You</p>
+        <p>For any inquiries, feedback, or assistance, please feel free to contact us through the following methods:</p>
+
+        <h3>Email</h3>
+        <p>You can reach us at: <a href="mailto:contact@modmysurron.com">contact@modmysurron.com</a></p>
+
+        <h3>Phone</h3>
+        <p>Call us at: [Your Phone Number]</p>
+
+        <h3>Mailing Address</h3>
+        <address>
+            ModMySurron<br>
+            [Your Street Address]<br>
+            [City, State, ZIP Code]<br>
+            [Country]
+        </address>
+
+        <h3>Business Hours</h3>
+        <p>Our team is available to assist you during the following hours:<br>
+        Monday to Friday: 9:00 AM to 5:00 PM (Munich Time Zone)</p>
     </div>
 </body>
 </html>
