--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - ModMySurron</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1 {
+            text-align: center;
+        }
+        p {
+            margin-bottom: 20px;
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p><strong>Effective Date:</strong> August 2, 2024</p>
+        <p><strong>ModMySurron</strong> ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, <a href="http://modmysurron.com">modmysurron.com</a> (the "Site"). Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Site.</p>
 
+        <h2>Information We Collect</h2>
+        <p><strong>Personal Data</strong>: Information such as your name, email address, and phone number, which you voluntarily provide when you register on our Site or contact us.</p>
+        <p><strong>Usage Data</strong>: Information automatically collected when you visit the Site, such as your IP address, browser type, operating system, access times, and pages viewed.</p>
+        <p><strong>Cookies and Tracking Technologies</strong>: We use cookies and similar technologies to enhance your experience on our Site. You can choose to disable cookies through your browser settings.</p>
+
+        <h2>How We Use Your Information</h2>
+        <ul>
+            <li><strong>To Improve Our Site:</strong> We may use feedback you provide to improve our products and services.</li>
+            <li><strong>To Send Periodic Emails:</strong> We may use your email address to send information and updates pertaining to your order or request.</li>
+            <li><strong>For Analytics and Marketing:</strong> We may use your information to analyze usage trends and improve our marketing efforts.</li>
+        </ul>
+
+        <h2>Sharing Your Information</h2>
+        <p>We do not sell, trade, or rent your personal information to others. We may share information with third parties that perform services for us or on our behalf, such as payment processing, data analysis, email delivery, hosting services, customer service, and marketing assistance.</p>
+
+        <h2>Security of Your Information</h2>
+        <p>We use administrative, technical, and physical security measures to protect your personal information. While we have taken reasonable steps to secure the personal information you provide to us, please be aware that despite our efforts, no security measures are perfect or impenetrable.</p>
+
+        <h2>Changes to This Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. We will notify you about significant changes by updating the "Effective Date" of this Privacy Policy. We encourage you to periodically review this Privacy Policy to stay informed about our practices.</p>
+
+        <h2>Contact Us</h2>
+        <p>If you have questions or comments about this Privacy Policy, please contact us at: <a href="mailto:contact@modmysurron.com">contact@modmysurron.com</a></p>
+    </div>
+</body>
+</html>
