--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -58,6 +58,8 @@
         <h2>Liability Disclaimer</h2>
         <p>The information contained in this website is for general information purposes only. The information is provided by ModMySurron, and while we endeavor to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</p>
 
+        <h2>Contact Us</h2>
+        <p>If you have questions or comments about this Privacy Policy, please contact us at: <a href="mailto:contact@modmysurron.com">contact@modmysurron.com</a></p>
 
     </div>
 </body>
